--- a/MySQL/结构优化和查询优化.md
+++ b/MySQL/结构优化和查询优化.md
@@ -2,3 +2,24 @@
 理解了索引背后的机制，选择高性能就是一个推理的过程。
 
 最左前缀原理
+
+# query语句优化
+Understanding the Query Execution Plan
+https://dev.mysql.com/doc/refman/8.0/en/execution-plan-information.html
+
+explain
+possible_keys 可能用到的索引；
+key 实际使用到的索引；
+key_len 索引长度；
+Extra 附加信息；
+filtered 过滤的行数；
+rows 扫描的行数；
+
+# Select优化
+
+NDB Cluster支持联接下推优化，将符合条件的联接完整地发送到NDB Cluster数据节点。
+
+优化查询注意：
+	• 要使SELECT … WHERE  查询更快，首先要检查的是是否可以添加index。（使用joins和foreigin keys引用不同table的查询，索引尤为重要。）
+	
+
