--- a/algorithm/动态规划.md
+++ b/algorithm/动态规划.md
@@ -1,4 +1,4 @@
-适合求解最优问题：
+# 适合求解最优问题
 
 将最优解问题，分解为多个阶段求解，逐级推导；
 
@@ -9,6 +9,7 @@
 一个模型：
 动态规划适合解决的问题的模型，多阶段决策最优解模型；每个决策阶段都对应一组状态，寻找一组决策序列，经过这组决策序列，产生最终期望求解的最优值。
 三个特征：
+
  1. 最优子结构
  问题的最优解包含子问题的最优解；
  2. 无后效性
@@ -17,6 +18,7 @@
  3. 不同的决策序列，到达某个相同的阶段时，可能会产生重复的状态；
 
 动态规划解题思路：
+
  1. 状态转移表法
  2. 状态转移方程法
 
